...
            SurfaceCard {
                if (!state.codeRequested) {
                    OutlinedTextField(
                        state.email,
                        model::email,
                        Modifier.fillMaxWidth(),
                        label = { Text("Email address") },
                        singleLine = true,
                        enabled = !state.busy,
                        keyboardOptions =
                            KeyboardOptions(
                                keyboardType = KeyboardType.Email,
                                imeAction = ImeAction.Send,
...
                    )
                } else {
                    OutlinedTextField(
                        code,
                        { code = it.filter(Char::isDigit).take(10) },
                        Modifier.fillMaxWidth(),
                        label = { Text("Sign-in code") },
                        singleLine = true,
                        enabled = !state.busy,
                        keyboardOptions =
                            KeyboardOptions(
                                keyboardType = KeyboardType.NumberPassword,
                                imeAction = ImeAction.Done,
...
